<resources>
    <string name="app_name">Shopping assistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_blank_fragment">Здравствуйте, я ваш помощник для покупок.</string>
    <string name="shopping_list">Список покупок</string>
    <string name="notes">Заметки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_position_to_shopping_list">Добавить позицию для покупок</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Название позиции</string>
    <string name="count">Количество</string>
    <string name="save">Сохранить</string>

    <string name="purchased">К у п л е н о</string>

    <string name="error_input_name">Name can not be a empty</string>
    <string name="error_input_count">Count should be 1 or more</string>

    <string name="enter_note_item_name">Название продукта</string>
    <string name="enter_note_item_category">Категория продукта</string>
    <string name="enter_note_item_price">Цена продукта</string>
    <string name="enter_market_name">Название магазина</string>
    <string name="note_item_tittle">Карточка продукта</string>


</resources>