<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center"
    tools:context=".presentation.noteItem.NoteItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_note_item_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/note_item_tittle"
            android:textSize = "30sp"
            android:gravity = "center"
            android:layout_margin = "8dp"
            >
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/im_note_item_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/products" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="3dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <ImageButton
                        android:id="@+id/create_photo_button"
                        android:layout_width="90dp"
                        android:layout_height="48dp"
                        android:background="@color/white"

                        android:scaleType="centerInside"
                        app:cardCornerRadius="10dp"
                        app:strokeColor="@color/black"
                        app:strokeWidth="1dp"
                        android:src="@drawable/photo" />
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="19dp">

                <EditText
                    android:id="@+id/et_note_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType = "textPersonName"
                    android:hint="@string/enter_note_item_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_note_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType = "textPersonName"
                    android:hint="@string/enter_note_item_category"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_note_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="35dp"
                    android:gravity="end"
                    android:hint="@string/enter_note_item_price"
                    android:textSize="25sp"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/et_market_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_market_name"
                    android:inputType = "textPersonName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="20.09.2022г." />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/save_note_item_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin = "8dp"
            android:text = "@string/save">
        </Button>
    </LinearLayout>

</androidx.cardview.widget.CardView>